# neural-network

./: .gitignore  Cargo.toml  GUI_README.md  README.md
src/: activation.rs  csv_reader.rs  layer.rs  lib.rs  network.rs  neuron.rs  perceptron.rs  train.rs  viz.rs
src/activation/: identity.rs  sigmoid.rs  step.rs  tanh.rs
src/gui/: app.rs  experiments.rs  mod.rs  params.rs  plots.rs
src/history/: adeline.rs  gradient.rs  linear.rs  mlp.rs  mod.rs  single_layer.rs  types.rs
src/network/: layer.rs  single_layer.rs  singlelayer.rs
src/neuron/: activation.rs  adaline.rs  adaline_ndbg.rs  classification_config.rs  gradient.rs  gradient_ndbg.rs  history.rs  perceptron.rs  perceptron_ndbg.rs  trainable.rs
src/neuron/activation/: identity.rs  sigmoid.rs  step.rs  tanh.rs
src/train/: adeline.rs  gradient.rs  linear.rs
src/trainer/: adeline.rs  gradient.rs  linear.rs
